...
            android:hint="PASSWORD"
            android:fontFamily="@font/cb"
            android:imeOptions="actionDone"
            android:layout_below="@+id/inserisciuser" />

        <Button
            android:id="@+id/premiaccesso"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="@color/scuro"
...
            android:shadowRadius="9"
            android:shadowColor="@color/scuro"
            android:shadowDx="1"
            android:shadowDy="1"/>

        <Button
            android:id="@+id/registrati"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textSize="18dp"
...
            android:shadowRadius="9"
            android:shadowColor="@color/scuro"
            android:shadowDx="1"
            android:shadowDy="1"/>

        <Button
            android:id="@+id/recupero"
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textSize="12dp"
...
