...
        android:paddingRight="15dp"
        android:layout_centerInParent="true"
        android:id="@+id/sfondodati"> -->

    <ScrollView
...
        android:layout_below="@id/fittizio"
        android:layout_marginTop="100dp"
        android:id="@+id/scrolling"
        android:fillViewport="true"
        android:paddingLeft="15dp"
...

            <EditText
                android:id="@+id/dgtuser"
                android:layout_width="250dp"
                android:layout_height="35dp"
...
                android:hint="USERNAME"
                android:textColor="@color/scuro"
                android:nextFocusForward="@id/dgtpass1"
                android:singleLine="true"
                android:textAlignment="center"
...
                android:fontFamily="monospace"
                android:hint="PASSWORD"
                android:nextFocusForward="@+id/dgtemail"
                android:singleLine="true"
                android:textAlignment="center" />
...
                android:textColor="@color/scuro"
                android:layout_below="@id/dgtpass1"
                android:id="@+id/occhio"/>

            <TextView
...
                android:text="TAP OCCHIO"
                android:textColor="@color/scuro"
                android:layout_above="@id/dgtpass2"
                android:textAlignment="center"
                android:layout_marginTop="-9dp"
...
                android:hint="EMAIL"
                android:textColor="@color/scuro"
                android:nextFocusForward="@+id/dgttelefono"
                android:singleLine="true"
                android:textAlignment="center"
...
                android:fontFamily="monospace"
                android:hint="TELEFONO"
                android:nextFocusForward="@+id/dgtnome"
                android:singleLine="true"
                android:textColor="@color/scuro"
...
                android:fontFamily="monospace"
                android:hint="NOME"
                android:nextFocusForward="@+id/dgtcognome"
                android:singleLine="true"
                android:textAlignment="center"
...

                    <RadioButton
                        android:id="@+id/maschio"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
...

                    <RadioButton
                        android:id="@+id/femmina"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
...

            <EditText
                android:id="@+id/dgtluogo"
                android:layout_width="250dp"
                android:layout_height="35dp"
...

            <Button
                android:id="@+id/datanascita"
                android:layout_width="250dp"
                android:layout_height="35dp"
...
                android:layout_marginTop="10dp"
                android:background="@drawable/edittextsotto"
                android:text="DATA NASCITA"
                android:letterSpacing="0.25"
                android:textAlignment="center"
...
                android:layout_marginBottom="25dp"
                android:layout_centerHorizontal="true"
                android:text="ISCRIVITI"
                android:background="@drawable/arc"
                android:onClick="provapost"
                android:id="@+id/post"/>

        </RelativeLayout>
...
